@@ -61,7 +61,7 @@ Example I: a triangular tower  (kip,in)
 1                               # 1: include shear deformation
 1                               # 1: include geometric stiffness
 2.0                             # exaggerate static mesh deformations
-1.0                             # x-axis increment for internal force data
+12.0                            # x-axis increment for internal force data
 
 
 
